--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "dependencies": {
         "@trashhalo/node-summarizer": "^1.0.9",
         "browserify": "^17.0.0",
-        "hookejs": "^1.3.2",
         "lexrank.js": "^1.4.0",
+        "plagiarism-checker": "^3.0.1",
         "textrank": "^1.0.5",
         "watchify": "^4.0.0",
         "wordnet-db": "^3.1.14"
